<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24765" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_0" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24743"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="YS Display-Bold.ttf">
            <string>YSDisplay-Bold</string>
        </array>
        <array key="YS Display-Medium.ttf">
            <string>YSDisplay-Medium</string>
        </array>
    </customFonts>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ab2-JY-hBY">
                                <rect key="frame" x="20" y="84" width="350" height="692"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jvF-IJ-nfB">
                                        <rect key="frame" x="0.0" y="0.0" width="350" height="23.666666666666668"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" lineBreakMode="tailTruncation" numberOfLines="24" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fv4-u3-0C4" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="314" height="23.666666666666668"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YPWhite"/>
                                                <nil key="highlightedColor"/>
                                                <size key="shadowOffset" width="74" height="24"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SlB-xP-P7y" userLabel="Index Label">
                                                <rect key="frame" x="314" y="0.0" width="36" height="23.666666666666668"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YPWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="gLb-vM-lqd" userLabel="Preview image">
                                        <rect key="frame" x="0.0" y="43.666666666666686" width="350" height="525"/>
                                        <color key="backgroundColor" name="YPWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="gLb-vM-lqd" secondAttribute="height" multiplier="2:3" id="FXc-xE-2X5"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="0.0" placeholderIntrinsicHeight="0.0" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WMc-lM-o8k" userLabel="Question Label">
                                        <rect key="frame" x="0.0" y="588.66666666666663" width="350" height="23.333333333333371"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                        <color key="textColor" name="YPWhite"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="obZ-h1-Tto">
                                        <rect key="frame" x="0.0" y="632" width="350" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XAQ-d5-zbM" userLabel="No Button">
                                                <rect key="frame" x="0.0" y="0.0" width="165" height="60"/>
                                                <color key="backgroundColor" name="YPWhite"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <color key="tintColor" name="YPBlack"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="Нет">
                                                            <attributes>
                                                                <font key="NSFont" size="20" name="YSDisplay-Medium"/>
                                                            </attributes>
                                                        </fragment>
                                                    </attributedString>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EdL-QH-XGy"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lzq-15-M7D" userLabel="Yes Button">
                                                <rect key="frame" x="185" y="0.0" width="165" height="60"/>
                                                <color key="backgroundColor" name="YPWhite"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <color key="tintColor" name="YPBlack"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Button">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="Да">
                                                            <attributes>
                                                                <font key="NSFont" size="20" name="YSDisplay-Medium"/>
                                                                <font key="NSOriginalFont" size="12" name="Helvetica"/>
                                                            </attributes>
                                                        </fragment>
                                                    </attributedString>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kw5-hr-MIc"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="h05-4b-eqW"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="mP5-Kl-0Wn">
                                <rect key="frame" x="185" y="412" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YPBlack"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="ab2-JY-hBY" secondAttribute="top" constant="10" id="B3R-40-XYp"/>
                            <constraint firstItem="mP5-Kl-0Wn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NuF-Xc-nj1"/>
                            <constraint firstItem="ab2-JY-hBY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="PnI-M3-mLq"/>
                            <constraint firstItem="mP5-Kl-0Wn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="feq-3J-Shq"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ab2-JY-hBY" secondAttribute="bottom" id="fyg-7i-Cf6"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ab2-JY-hBY" secondAttribute="trailing" constant="20" id="mZy-oN-OL9"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="mP5-Kl-0Wn" id="LcE-xE-46E"/>
                        <outlet property="counterLabel" destination="SlB-xP-P7y" id="b1q-jb-xKO"/>
                        <outlet property="imageView" destination="gLb-vM-lqd" id="UUk-dW-FQB"/>
                        <outlet property="noButton" destination="XAQ-d5-zbM" id="kfm-Mv-ZG2"/>
                        <outlet property="textLabel" destination="WMc-lM-o8k" id="1Kk-b6-2tE"/>
                        <outlet property="yesButton" destination="lzq-15-M7D" id="DqU-aK-Yyw"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.38461538461538" y="55.45023696682464"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YPBlack">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YPWhite">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
